--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "@types/jest": "^26.0.22",
         "cross-env": "^7.0.3",
+        "dotenv": "^8.2.0",
         "eslint": "^7.23.0",
         "jest": "^26.6.3",
         "knex-cleaner": "^1.3.1",
