--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "knex-cleaner": "^1.3.1",
         "nodemon": "^2.0.7",
         "supertest": "^6.1.3"
+    },
+    "engines": {
+        "node": "12.11.1"
     }
 }
