--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "start": "node index.js",
-        "server": "nodemon index.js",
+        "watch": "nodemon index.js",
         "test": "cross-env NODE_ENV=testing jest --watch --verbose --runInBand --silent",
         "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
     },
@@ -25,8 +25,5 @@
         "knex-cleaner": "^1.3.1",
         "nodemon": "^2.0.7",
         "supertest": "^6.1.3"
-    },
-    "engines": {
-        "node": "12.11.1"
     }
 }
